@@ -1,4 +1,4 @@
-// $Id: CommandLineOption.cpp,v 1.1 2006/03/23 13:41:17 gerrit-albrecht Exp $
+// $Id: CommandLineOption.cpp,v 1.2 2006/03/23 14:08:39 gerrit-albrecht Exp $
 //
 // Miraledon Class Library
 // Copyright (C) 2005, 2006 by Gerrit M. Albrecht
@@ -18,9 +18,9 @@
 // License along with this library; if not, write to the Free Software
 // Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA
 
-/// \file CommandLine.h
+/// \file CommandLineOption.h
 /// \author Gerrit M. Albrecht
-/// \brief Contains the definition of the MCommandLine class.
+/// \brief Contains the definition of the MCommandLineOption class.
 
 #include "StdAfx.h"
 #include "CommandLineOption.h"
